Removed bg color on containers + fixed layout issue
Fjernet bakgrunnsfarge på forskjellige containere og fikset et layout issue på add/fjern knappene.

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -48,4 +48,6 @@ img:hover {
   color: #101622;
 }
 
-
+.product-page-bg {
+  background-color: #f9f9f9;
+}
